--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "react-chartjs": "1.2.0",
+    "chart.js": "2.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
